--- a/src/webapp/WEB-INF/pages/index.html
+++ b/src/webapp/WEB-INF/pages/index.html
@@ -2,14 +2,110 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title></title>
+  <meta charset="UTF-8">
+  <title>Users</title>
+    <style>
+        .field {clear:both; text-align:right; line-height:25px;}
+        label {float:left; padding-right:10px;}
+        .main {float:left}
+        .block {
+            position: relative;
+            left: 150px;
+        }
+        table{
+            border: 1px solid #eee;
+            table-layout: fixed;
+            width: 900px;
+            margin-bottom: 20px;
+            border-collapse:collapse;
+        }
+        th {
+            font-weight: bold;
+            padding: 5px;
+            background: #efefef;
+            border: 1px solid #dddddd;
+            text-align: left;
+        }
+        td{
+            padding: 5px 10px;
+            border: 1px solid #eee;
+            text-align: left;
+        }
+        table tbody tr:nth-child(odd){
+            background: #fff;
+        }
+        table tbody tr:nth-child(even){
+            background: #F7F7F7;
+        }
+    </style>
 </head>
 <body>
-<div>
-    <th:block th:each="msg : ${messages}">
-        <h1 th:text="${msg}"></h1>
-    </th:block>
-</div>
+
+    <h3 align="center">List of Users</h3>
+    <table  align="center">
+      <thead>
+          <tr>
+              <th>Id</th>
+              <th>Name</th>
+              <th>Surname</th>
+              <th>Age</th>
+              <th>Edit</th>
+              <th>Delete</th>
+          </tr>
+      </thead>
+      <tbody>
+          <tr th:each = "user : ${userList}">
+              <td th:utext="${user.getId()}"></td>
+              <td th:utext="${user.getName()}"></td>
+              <td th:utext="${user.getSurname()}"></td>
+              <td th:utext="${user.getAge()}"></td>
+              <td>
+                  <div>
+                    <a th:href="@{/{id}/edit(id=${user.getId()})}"><button type="button">Edit</button></a>
+                  </div>
+              </td>
+              <td>
+                  <div>
+                    <form th:method="DELETE" th:action="@{/{id}(id=${user.getId()})}">
+                        <input type="submit" value = "Delete"/>
+                    </form>
+                  </div>
+              </td>
+          </tr>
+      </tbody>
+    </table>
+
+    <br/>
+    <br/>
+
+    <form th:method="POST" th:action="@{/}" th:object="${newUser}">
+      <div class="main block">
+          <h3>Add new user</h3>
+          <div class="field">
+            <label for="name">Name</label>
+            <input type="text" th:field="*{name}" id="name"/>
+          </div>
+          <div class="field">
+            <label for="surname">Surname</label>
+            <input type="text" th:field="*{surname}" id="surname"/>
+          </div>
+          <div class="field">
+            <label for="email">Age</label>
+            <input type="text" th:field="*{age}" id="email"/>
+          </div>
+          <em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;!fields should not be empty</em>
+          <br/>
+          <br/>
+          <input type="submit" value="Add Person"/>
+      </div>
+    </form>
+
 </body>
 </html>
+
+
+
+
+
+
+
