--- a/src/webapp/WEB-INF/pages/editUser.html
+++ b/src/webapp/WEB-INF/pages/editUser.html
@@ -19,34 +19,25 @@
 
   <form th:method="PATCH" th:action="@{/{id}(id=${user.getId()})}" th:object="${user}">
   <div class="main block">
-    <h3>Edit user</h3>
+    <h3>Редактировать пользователя</h3>
     <div class="field">
-      <label for="name">Name</label>
+      <label for="name">Имя</label>
       <input type="text" th:field="*{name}" id="name"/>
     </div>
     <div class="field">
-      <label for="surname">Surname</label>
+      <label for="surname">Фамилия</label>
       <input type="text" th:field="*{surname}" id="surname"/>
     </div>
     <div class="field">
-      <label for="email">Age</label>
+      <label for="email">Возраст</label>
       <input type="text" th:field="*{age}" id="email"/>
     </div>
-    <em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;!fields should not be empty</em>
+    <em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;все поля должны быть заполнены</em>
     <br/>
     <br>
-    <input type="submit" value="Update"/>
+    <input type="submit" value="Внести измениния"/>
   </div>
 </form>
-
-
-
-
-
-<!--   <form th:method="DELETE" th:action="@{/users/{id}(id=${user.getId()})}" th:object="${user}">-->
-<!--   <input type="submit" value = "Delete"/>-->
-<!--   </form>-->
-
 
 </body>
 </html>
