--- a/src/webapp/WEB-INF/pages/index.html
+++ b/src/webapp/WEB-INF/pages/index.html
@@ -41,16 +41,16 @@
 </head>
 <body>
 
-    <h3 align="center">List of Users</h3>
+    <h3 align="center">Список пользователей</h3>
     <table  align="center">
       <thead>
           <tr>
               <th>Id</th>
-              <th>Name</th>
-              <th>Surname</th>
-              <th>Age</th>
-              <th>Edit</th>
-              <th>Delete</th>
+              <th>Имя</th>
+              <th>Фамилия</th>
+              <th>Возраст</th>
+              <th>Редактировать</th>
+              <th>Удалить</th>
           </tr>
       </thead>
       <tbody>
@@ -80,23 +80,23 @@
 
     <form th:method="POST" th:action="@{/}" th:object="${newUser}">
       <div class="main block">
-          <h3>Add new user</h3>
+          <h3>Добавить нового пользователя</h3>
           <div class="field">
-            <label for="name">Name</label>
+            <label for="name">Имя</label>
             <input type="text" th:field="*{name}" id="name"/>
           </div>
           <div class="field">
-            <label for="surname">Surname</label>
+            <label for="surname">Фамилия</label>
             <input type="text" th:field="*{surname}" id="surname"/>
           </div>
           <div class="field">
-            <label for="email">Age</label>
+            <label for="email">Возраст</label>
             <input type="text" th:field="*{age}" id="email"/>
           </div>
-          <em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;!fields should not be empty</em>
+          <em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;все поля должны быть заполнены</em>
           <br/>
           <br/>
-          <input type="submit" value="Add Person"/>
+          <input type="submit" value="Добавить"/>
       </div>
     </form>
 
