--- a/src/webapp/WEB-INF/pages/editUser.html
+++ b/src/webapp/WEB-INF/pages/editUser.html
@@ -2,41 +2,53 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Update</title>
-  <style>
-    .field {clear:both; text-align:right; line-height:25px;}
-    label {float:left; padding-right:10px;}
-    .main {float:left}
-    .block{
-      position: absolute;
-      top: 20%;
-      left: 42%;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Update</title>
+    <style>
+        .field {
+            clear: both;
+            text-align: right;
+            line-height: 25px;
+        }
+
+        label {
+            float: left;
+            padding-right: 10px;
+        }
+
+        .main {
+            float: left
+        }
+
+        .block {
+            position: absolute;
+            top: 20%;
+            left: 42%;
+        }
+    </style>
 </head>
 <body>
 
-  <form th:method="PATCH" th:action="@{/{id}(id=${user.getId()})}" th:object="${user}">
-  <div class="main block">
-    <h3>Редактировать пользователя</h3>
-    <div class="field">
-      <label for="name">Имя</label>
-      <input type="text" th:field="*{name}" id="name"/>
+<form th:method="PATCH" th:action="@{/{id}(id=${user.getId()})}" th:object="${user}">
+    <div class="main block">
+        <h3>Редактировать пользователя</h3>
+        <div class="field">
+            <label for="name">Имя</label>
+            <input type="text" th:field="*{name}" id="name"/>
+        </div>
+        <div class="field">
+            <label for="surname">Фамилия</label>
+            <input type="text" th:field="*{surname}" id="surname"/>
+        </div>
+        <div class="field">
+            <label for="email">Возраст</label>
+            <input type="text" th:field="*{age}" id="email"/>
+        </div>
+        <em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;все поля должны быть заполнены</em>
+        <br/>
+        <br>
+        <input type="submit" value="Внести измениния"/>
     </div>
-    <div class="field">
-      <label for="surname">Фамилия</label>
-      <input type="text" th:field="*{surname}" id="surname"/>
-    </div>
-    <div class="field">
-      <label for="email">Возраст</label>
-      <input type="text" th:field="*{age}" id="email"/>
-    </div>
-    <em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;все поля должны быть заполнены</em>
-    <br/>
-    <br>
-    <input type="submit" value="Внести измениния"/>
-  </div>
 </form>
 
 </body>
